--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ background-color: black;
 }
 h3
 {
+	text-align: center;
    color: lightgreen;
 }
 p
@@ -14,9 +15,10 @@ li {
 	color: lavender;
 	}
 	
-	h2
+	h1
 {
    color: lightgreen;
+   text-align: center;
 }
 .outline {
 	display: inline-block;
@@ -24,4 +26,37 @@ li {
 	border-radius:10px;
 	margin: 5px;
 	padding: 8px 15px;
+	}
+.navbar ul {
+		background-color: lightgreen;
+		list-style-type: none;
+		padding: 0px;
+		margin: 0px;
+		overflow: hidden;
+		}
+	.navbar li{
+		float: left;
+		}
+		
+	.navbar a {
+		color: black;
+		text-decoration: none;
+		padding: 15px;
+		display: block;
+		text-align: center;
+		}
+	img{
+		align: center;
+		height:300px;
+		width: 300px;
+		border-radius: 120px;
+		}
+.p_center {
+	text-align: center;
+	}
+.secret{
+	display:none;
+	}
+a{
+	color: yellow;
 	}
